--- a/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
@@ -1,11 +1,11 @@
-auto <%= interface %>
-iface <%= interface %> inet manual
+auto <%= @interface %>
+iface <%= @interface %> inet manual
 <% if @macaddr -%>
 hwaddress ether <%= @macaddr.downcase %>
 <% end -%>
 <% if @vlan_mode %>vlan_raw_device <%= @vlan_dev %><% end %>
-up ip l set <%= interface %> up
-down ip l set <%= interface %> down
+up ip l set <%= @interface %> up
+down ip l set <%= @interface %> down
 <% if @mtu %>mtu <%= @mtu %><% end %>
 <% if @bond_mode %>slaves none
 bond-mode <%= @bond_mode %><% if @bond_miimon %>
