--- a/deployment/puppet/nailgun/templates/supervisord.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.erb
@@ -15,7 +15,7 @@ childlogdir=/var/log/supervisor
 serverurl=unix:///var/run/supervisor.sock
 
 [program:nailgun]
-command=<%= venv %>/bin/nailgund
+command=<%= @venv %>/bin/nailgund
 process_name=%(program_name)s
 numprocs=1
 numprocs_start=0
