--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -1,10 +1,10 @@
 [client]
-port    = <%= port %>
-socket    = <%= socket %>
+port    = <%= @port %>
+socket    = <%= @socket %>
 [mysqld_safe]
-socket    = <%= socket %>
+socket    = <%= @socket %>
 nice    = 0
-<% if use_syslog -%>
+<% if @use_syslog -%>
 syslog
 <% end -%>
 [mysqld]
@@ -13,14 +13,14 @@ innodb_file_per_table=1
 innodb_file_format=Barracuda
 <% end -%>
 user    = mysql
-#pid-file  = <%= pidfile %>
-socket    = <%= socket %>
-port      = <%= port %>
-basedir   = <%= basedir %>
-datadir   = <%= datadir %>
+#pid-file  = <%= @pidfile %>
+socket    = <%= @socket %>
+port      = <%= @port %>
+basedir   = <%= @basedir %>
+datadir   = <%= @datadir %>
 tmpdir    = /tmp
 skip-external-locking
-bind-address    = <%= bind_address %>
+bind-address    = <%= @bind_address %>
 key_buffer         = 16M
 max_allowed_packet = 16M
 thread_stack       = 192K
@@ -28,31 +28,31 @@ thread_cache_size  = 8
 myisam-recover     = BACKUP
 query_cache_limit  = 1M
 query_cache_size   = 16M
-<% if use_syslog -%>
+<% if @use_syslog -%>
 #log_error          = syslog:local1
 <% else -%>
-log_error          = <%= log_error %>
+log_error          = <%= @log_error %>
 <% end -%>
 expire_logs_days   = 10
 max_binlog_size    = 100M
 max_connections    = 2048
 table_open_cache   = 10000
 wait_timeout       = 30
-innodb_buffer_pool_size   = <%= mysql_buffer_pool_size %>
+innodb_buffer_pool_size   = <%= @mysql_buffer_pool_size %>
 innodb_thread_concurrency = 0
 innodb_write_io_threads   = 2
 innodb_read_io_threads    = 8
 innodb_io_capacity        = 500
-<% if default_engine != 'UNSET' %>
-default-storage-engine = <%= default_engine %>
+<% if @default_engine != 'UNSET' %>
+default-storage-engine = <%= @default_engine %>
 <% end %>
-<% if ssl == true %>
-ssl-ca    = <%= ssl_ca %>
-ssl-cert  = <%= ssl_cert %>
-ssl-key   = <%= ssl_key %>
+<% if @ssl == true %>
+ssl-ca    = <%= @ssl_ca %>
+ssl-cert  = <%= @ssl_cert %>
+ssl-key   = <%= @ssl_key %>
 <% end %>
-<% if custom_setup_class == 'pacemaker_mysql' %>
-server-id=<%= server_id %>
+<% if @custom_setup_class == 'pacemaker_mysql' %>
+server-id=<%= @server_id %>
 log-bin=mysql-bin
 relay-log=mysqld-relay-bin
 replicate-ignore-db=mysql
