Add Ubuntu style syslog reloading to logrotate templates
Change-Id: Id32b0b678bbc2e681adb1974dc4d111dbd354504
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/openstack/templates/10-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/10-fuel.conf.erb
@@ -21,5 +21,6 @@
   notifempty
   postrotate
       /bin/kill -HUP `cat /var/run/syslogd.pid 2> /dev/null` 2> /dev/null || true
+      reload rsyslog >/dev/null 2>&1 || true
   endscript
 }
