--- a/deployment/puppet/nailgun/templates/supervisord.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.erb
@@ -32,6 +32,42 @@ stdout_capture_maxbytes=0
 stdout_events_enabled=false
 serverurl=AUTO
 
+[program:assassind]
+command=<%= venv %>/bin/assassind
+process_name=%(program_name)s
+numprocs=1
+numprocs_start=0
+autostart=true
+autorestart=true
+startsecs=10
+startretries=1000000
+exitcodes=0
+stopsignal=INT
+stopwaitsecs=60
+redirect_stderr=true
+stdout_logfile=/var/log/nailgun/assassind.log
+stdout_capture_maxbytes=0
+stdout_events_enabled=false
+serverurl=AUTO
+
+[program:receiverd]
+command=<%= venv %>/bin/receiverd
+process_name=%(program_name)s
+numprocs=1
+numprocs_start=0
+autostart=true
+autorestart=true
+startsecs=10
+startretries=1000000
+exitcodes=0
+stopsignal=INT
+stopwaitsecs=60
+redirect_stderr=true
+stdout_logfile=/var/log/nailgun/receiverd.log
+stdout_capture_maxbytes=0
+stdout_events_enabled=false
+serverurl=AUTO
+
 [program:naily]
 command=/usr/bin/nailyd -c /etc/naily/nailyd.conf -l /var/log/naily/naily.log -w 3
 process_name=%(program_name)s
