--- a/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
+++ b/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
@@ -26,7 +26,7 @@ d-i clock-setup/utc boolean true
 d-i clock-setup/ntp boolean false
 d-i time/zone string <%= @ks_system_timezone %>
 
-d-i preseed/early_command string /usr/bin/killall -s KILL syslogd ; /sbin/syslogd -m 0 -O /var/log/syslog -S -R @@server@@
+$SNIPPET('ubuntu_network_console_and_syslog')
 
 $SNIPPET('ubuntu_partition')
 
