Mysql performance and disk optimization
1. Use per table innodb option
2. Use Barracuda file format

Change-Id: I42eaa51aa80853f609f34d8028eed32f1ec8a2dc
Partial-bug: #1278964

--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -8,6 +8,8 @@ nice    = 0
 syslog
 <% end -%>
 [mysqld]
+innodb_file_per_table=1
+innodb_file_format=Barracuda
 user    = mysql
 #pid-file  = <%= pidfile %>
 socket    = <%= socket %>
