--- a/deployment/puppet/galera/templates/wsrep.cnf.erb
+++ b/deployment/puppet/galera/templates/wsrep.cnf.erb
@@ -11,7 +11,6 @@
 ## mysqld options _MANDATORY_ for correct opration of the cluster
 ##
 [mysqld]
-
 # (This must be substituted by wsrep_format)
 binlog_format=ROW
 
@@ -141,3 +140,5 @@ innodb_write_io_threads=8
 innodb_read_io_threads=8
 innodb_io_capacity=500
 table_cache=10000
+innodb_file_per_table=1
+innodb_file_format=Barracuda
