Add ethtool support to the L23network module
Change-Id: I5c74b503b13847eac5176b7e0561fcc0a95e0822
Partial-bug: #1275650
Implements: blueprint ethtool-at-boot-by-l23network

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -7,3 +7,8 @@ hwaddress ether <%= @macaddr.downcase %>
 <% if @mtu -%>
 mtu <%= @mtu %>
 <% end -%>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+post-up  ethtool  <%= key %>  <%= interface %>  <%= line %> || true
+<%- end -%>
+<%- end -%>
