--- a/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
@@ -13,3 +13,8 @@ bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 <% if @mtu -%>
 mtu <%= @mtu %>
 <% end -%>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+post-up  ethtool  <%= key %>  <%= interface %>  <%= line %> || true
+<%- end -%>
+<%- end -%>
