--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_bondslave.erb
@@ -10,3 +10,8 @@ MACADDR=<%= @macaddr.upcase %>
 <% if @mtu -%>
 MTU=<%= @mtu %>
 <% end -%>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+post-up  ethtool  <%= key %>  <%= interface %>  <%= line %> || true
+<%- end -%>
+<%- end -%>
