--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_ifup-script.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_ifup-script.erb
@@ -4,4 +4,9 @@
 ip addr add <%= addr %> dev <%= interface %>
 <%- end -%>
 <%- end -%>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+ethtool  <%= key %>  <%= interface %>  <%= line %>
+<%- end -%>
+<%- end -%>
 true
