--- a/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
@@ -1,5 +1,5 @@
-auto <%= interface %>
-iface <%= interface %> inet manual
+auto <%= @interface %>
+iface <%= @interface %> inet manual
 <% if @macaddr -%>
 hwaddress ether <%= @macaddr.downcase %>
 <% end -%>
@@ -7,10 +7,15 @@ hwaddress ether <%= @macaddr.downcase %>
 mtu <%= @mtu %>
 <% end -%>
 <% if @vlan_mode %>vlan_raw_device <%= @vlan_dev %><% end %>
-up ip l set <%= interface %> up
-down ip l set <%= interface %> down
+up ip l set <%= @interface %> up
+down ip l set <%= @interface %> down
 <% if @bond_mode %>slaves none
 bond-mode <%= @bond_mode %><% if @bond_miimon %>
 bond-miimon <%= @bond_miimon %><% end %><% if @bond_lacp_rate %>
 bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 <% end %>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+post-up  ethtool  <%= key %>  <%= interface %>  <%= line %> || true
+<%- end -%>
+<%- end -%>
