Add ethtool support to the L23network module
backport to 4.1

Change-Id: I5c74b503b13847eac5176b7e0561fcc0a95e0822
Partial-bug: #1275650
Implements: blueprint ethtool-at-boot-by-l23network

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -7,3 +7,4 @@ hwaddress ether <%= @macaddr.downcase %>
 <% if @mtu -%>
 mtu <%= @mtu %>
 <% end -%>
+<%= scope.function_template(['l23network/ethtool_Debian.erb']) %>
