Add ethtool support to the L23network module
Change-Id: I5c74b503b13847eac5176b7e0561fcc0a95e0822
Partial-bug: #1275650
Implements: blueprint ethtool-at-boot-by-l23network

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
@@ -14,3 +14,8 @@ bond-mode <%= @bond_mode %><% if @bond_miimon %>
 bond-miimon <%= @bond_miimon %><% end %><% if @bond_lacp_rate %>
 bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 <% end %>
+<%- if @ethtool_lines -%>
+<%- @ethtool_lines.each do |key,line| -%>
+post-up  ethtool  <%= key %>  <%= interface %>  <%= line %> || true
+<%- end -%>
+<%- end -%>
