Add ethtool support to the L23network module
Change-Id: I5c74b503b13847eac5176b7e0561fcc0a95e0822
Partial-bug: #1275650
Implements: blueprint ethtool-at-boot-by-l23network

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
@@ -22,3 +22,4 @@ bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 post-up ip addr add <%= addr %> dev <%= @interface %>
 pre-down ip addr del <%= addr %> dev <%= @interface %>
 <%- end -%><%- end -%>
+<%= scope.function_template(['l23network/ethtool_Debian.erb']) %>
