--- a/deployment/puppet/galera/templates/wsrep.cnf.erb
+++ b/deployment/puppet/galera/templates/wsrep.cnf.erb
@@ -34,7 +34,7 @@ query_cache_type=0
 bind-address=<%= node_address %>
 port=3307
 
-max_connections=2048
+max_connections=<%= max_connections %>
 
 ##
 ## WSREP options
@@ -123,7 +123,7 @@ wsrep_sst_receive_address=<%= node_address %>:3307
 
 # SST authentication string. This will be used to send SST to joining nodes.
 # Depends on SST method. For mysqldump method it is root:<root password>
-wsrep_sst_auth=<%= mysql_user %>:<%= mysql_password %> 
+wsrep_sst_auth=<%= mysql_user %>:<%= mysql_password %>
 
 # Desired SST donor name.
 #wsrep_sst_donor=
@@ -140,4 +140,7 @@ innodb_thread_concurrency=0
 innodb_write_io_threads=8
 innodb_read_io_threads=8
 innodb_io_capacity=500
-table_cache=10000
+table_open_cache=<%= table_open_cache %>
+key_buffer_size=<%= key_buffer_size %>
+myisam_sort_buffer_size=<%= myisam_sort_buffer_size %>
+wait_timeout=<%= wait_timeout %>
