--- a/deployment/puppet/galera/templates/wsrep.cnf.erb
+++ b/deployment/puppet/galera/templates/wsrep.cnf.erb
@@ -33,7 +33,7 @@ query_cache_type=0
 bind-address=<%= node_address %>
 port=3307
 
-max_connections=2048
+max_connections=<%= max_connections %>
 
 ##
 ## WSREP options
@@ -122,7 +122,7 @@ wsrep_sst_receive_address=<%= node_address %>:3307
 
 # SST authentication string. This will be used to send SST to joining nodes.
 # Depends on SST method. For mysqldump method it is root:<root password>
-wsrep_sst_auth=<%= mysql_user %>:<%= mysql_password %> 
+wsrep_sst_auth=<%= mysql_user %>:<%= mysql_password %>
 
 # Desired SST donor name.
 #wsrep_sst_donor=
@@ -134,11 +134,23 @@ skip-name-resolve
 <% end -%>
 <% if mysql_buffer_pool_size %>
 innodb_buffer_pool_size=<%= mysql_buffer_pool_size %>
+<% if innodb_log_file_size_real != '0' %>
+innodb_log_file_size=<%= innodb_log_file_size_real %>
+<% end %>
 <% end %>
 innodb_thread_concurrency=0
-innodb_write_io_threads=8
+innodb_write_io_threads=2
 innodb_read_io_threads=8
 innodb_io_capacity=500
-table_cache=10000
 innodb_file_per_table=1
+<% if operatingsystem != 'RedHat' %>
+table_open_cache=<%= table_open_cache %>
 innodb_file_format=Barracuda
+<% else %>
+table_cache=<%= table_open_cache %>
+<% end %>
+key_buffer_size=<%= key_buffer_size %>
+myisam_sort_buffer_size=<%= myisam_sort_buffer_size %>
+wait_timeout=<%= wait_timeout %>
+open_files_limit=<%= open_files_limit %>
+innodb_flush_log_at_trx_commit=<%= innodb_flush_log_at_trx_commit %>
