--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -9,9 +9,12 @@ syslog
 <% end -%>
 [mysqld]
 innodb_file_per_table=1
-<% if @operatingsystem != 'RedHat' %>
+<% if operatingsystem != 'RedHat' %>
+table_open_cache=<%= table_open_cache %>
 innodb_file_format=Barracuda
-<% end -%>
+<% else %>
+table_cache=<%= table_open_cache %>
+<% end %>
 user    = mysql
 #pid-file  = <%= pidfile %>
 socket    = <%= socket %>
@@ -28,6 +31,20 @@ thread_cache_size  = 8
 myisam-recover     = BACKUP
 query_cache_limit  = 1M
 query_cache_size   = 16M
+<% if mysql_buffer_pool_size %>
+innodb_buffer_pool_size=<%= mysql_buffer_pool_size %>
+<% if innodb_log_file_size_real != '0' %>
+innodb_log_file_size=<%= innodb_log_file_size_real %>
+<% end %>
+<% end %>
+innodb_thread_concurrency= 0
+innodb_write_io_threads  = 2
+innodb_read_io_threads   = 8
+innodb_io_capacity       = 500
+key_buffer_size          = <%= key_buffer_size %>
+myisam_sort_buffer_size  = <%= myisam_sort_buffer_size %>
+wait_timeout             = <%= wait_timeout %>
+open_files_limit         = <%= open_files_limit %>
 <% if use_syslog -%>
 #log_error          = syslog:local1
 <% else -%>
@@ -35,14 +52,7 @@ log_error          = <%= log_error %>
 <% end -%>
 expire_logs_days   = 10
 max_binlog_size    = 100M
-max_connections    = 2048
-table_open_cache   = 10000
-wait_timeout       = 30
-innodb_buffer_pool_size   = <%= mysql_buffer_pool_size %>
-innodb_thread_concurrency = 0
-innodb_write_io_threads   = 2
-innodb_read_io_threads    = 8
-innodb_io_capacity        = 500
+max_connections    =  <%= max_connections %>
 <% if default_engine != 'UNSET' %>
 default-storage-engine = <%= default_engine %>
 <% end %>
