--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -28,6 +28,24 @@ thread_cache_size  = 8
 myisam-recover     = BACKUP
 query_cache_limit  = 1M
 query_cache_size   = 16M
+<% if mysql_buffer_pool_size %>
+innodb_buffer_pool_size=<%= mysql_buffer_pool_size %>
+<% if update_innodb_log_file_size %>
+innodb_log_file_size=<%= mysql_log_file_size %>
+<% else %>
+# recommended value for innodb_log_file_size=<%= mysql_log_file_size %>
+# But at the first, take care of your existing log_files, if any
+<% end %>
+<% end %>
+innodb_thread_concurrency= 0
+innodb_write_io_threads  = 2
+innodb_read_io_threads   = 8
+innodb_io_capacity       = 500
+table_open_cache         = <%= table_open_cache %>
+key_buffer_size          = <%= key_buffer_size %>
+myisam_sort_buffer_size  = <%= myisam_sort_buffer_size %>
+wait_timeout             = <%= wait_timeout %>
+open_files_limit         = <%= open_files_limit %>
 <% if use_syslog -%>
 #log_error          = syslog:local1
 <% else -%>
@@ -35,7 +53,7 @@ log_error          = <%= log_error %>
 <% end -%>
 expire_logs_days   = 10
 max_binlog_size    = 100M
-max_connections    = 512
+max_connections    =  <%= max_connections %>
 <% if default_engine != 'UNSET' %>
 default-storage-engine = <%= default_engine %>
 <% end %>
