Add new snippet ubuntu_authorized_keys
Adds a new snippet for setting up the /root/.ssh/authorized_keys in Ubuntu
carriage returns in keys are escaped in the preseed
they are put back with command echo -e
existing authorized_keys renamed centos_*

Change-Id: Ia9b77d418a27f86665671c323ae0e23002907456
Closes-Bug: #1277253

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -203,7 +203,7 @@ echo target > /etc/nailgun_systemtype
 
 # COBBLER EMBEDDED SNIPPET: 'authorized_keys'
 # PUTS authorized_keys file into /root/.ssh/authorized_keys
-$SNIPPET('authorized_keys')
+$SNIPPET('centos_authorized_keys')
 
 # COBBLER EMBEDDED SNIPPET: 'nailgun_repo'
 # REMOVES ALL *.repo FILES FROM /etc/yum.repos.d AND
