--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -31,7 +31,14 @@ log_error          = <%= log_error %>
 <% end -%>
 expire_logs_days   = 10
 max_binlog_size    = 100M
-max_connections    = 512
+max_connections    = 2048
+table_open_cache   = 10000
+wait_timeout       = 30
+innodb_buffer_pool_size   = <%= mysql_buffer_pool_size %>
+innodb_thread_concurrency = 0
+innodb_write_io_threads   = 8
+innodb_read_io_threads    = 8
+innodb_io_capacity        = 500
 <% if default_engine != 'UNSET' %>
 default-storage-engine = <%= default_engine %>
 <% end %>
