--- a/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
+++ b/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
@@ -125,7 +125,7 @@ echo 'deb http://@@server@@:8080/ubuntu/fuelweb/x86_64 precise main' > /target/e
 #set $authorized_keys = str(open("/etc/cobbler/authorized_keys", "r").read()).rstrip('\n')
 mkdir -p /target/root/.ssh && \
 echo "$authorized_keys" > /target/root/.ssh/authorized_keys && \
-sed -i -e "/^\s*GSSAPICleanupCredentials yes/d" -e "/^\s*GSSAPIAuthentication yes/d" -e "s/.*PasswordAuthentication.*/PasswordAuthentication\ no/g" -e "/UseDNS/d" /target/etc/ssh/sshd_config && \
+sed -i -e "/^\s*GSSAPICleanupCredentials yes/d" -e "/^\s*GSSAPIAuthentication yes/d" -e "s/.*PasswordAuthentication\ .*/PasswordAuthentication\ no/g" -e "/UseDNS/d" /target/etc/ssh/sshd_config && \
 echo "UseDNS no" >> /target/etc/ssh/sshd_config && \
 in-target wget -O /etc/rsyslog.d/20-puppet_stdout.conf "http://$server/cobbler/aux/20-puppet_stdout_syslog.conf" && \
 in-target wget -O /etc/rsyslog.d/20-puppet_error.conf "http://$server/cobbler/aux/20-puppet_error_syslog.conf" && \
