Fix puppet logs tags in rsyslog template
- add puppet-error, puppet_err tags
- use strict '==' (faster) instead of 'contains'

Closes-bug: #1275121

Change-Id: I58afae3ae220dc437f23670796526e67d2f8a3b3
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/rsyslog/templates/60-puppet-apply.conf.erb
+++ b/deployment/puppet/rsyslog/templates/60-puppet-apply.conf.erb
@@ -1,7 +1,9 @@
 # file is managed by puppet
 
 ### collect puppet logs of all levels in /var/log/puppet/puppet.log
-if ($programname contains 'puppet-apply') \
+if ($programname == 'puppet-apply' \
+ or $programname == 'puppet-error' \
+ or $programname == 'puppet_err') \
 ### use 6 for INFO+ msg levels, 5 for WARN+ etc.
 ###  and $syslogseverity <= '6' \
 then -/var/log/puppet/puppet.log
