Fix bool defaults for debug, verbose, use_syslog
- Sync from upstream: debug, verbose, use_syslog defaults as bools

Implements bluepprint: refactor-logging-puppet-openstack-services

Change-Id: I7f44080de617b735103f369fbb331e1ffb0f54c1
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -312,7 +312,7 @@ LOGGING = {
             # Logging from django.db.backends is VERY verbose, send to null
             # by default.
             'django.db.backends': {
-                'handlers':<% if django_debug=='True' and use_syslog -%> ['syslog']<% else -%> ['null']<% end -%>,
+                'handlers':<% if django_debug and use_syslog -%> ['syslog']<% else -%> ['null']<% end -%>,
                 'level': 'DEBUG',
                 'propagate': False
                 },
