Add logging support to Heat
Change-Id: I458d3e8ac101a72f5d94f52809ee3db9809edf9a
Closes-Bug: 1263146

--- a/deployment/puppet/openstack/templates/10-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/10-fuel.conf.erb
@@ -20,6 +20,7 @@
 "/var/log/cinder/*.log"
 "/var/log/mysqld.log"
 "/var/log/murano/*.log"
+"/var/log/heat/*.log"
 {
 # This file is used for daily log rotations, do not use size options here
   sharedscripts
