--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -19,6 +19,7 @@
 "/var/log/glance/*.log"
 "/var/log/cinder/*.log"
 "/var/log/mysqld.log"
+"/var/log/heat/*.log"
 # This file is used for hourly log rotations, use (min)size options here
 {
   sharedscripts
