Add kernel_ml options to cobbler scripts
Add support to pass ks_meta kernel_ml = 1 to cobbler. This will cause the package
 kernel-ml to be added in the CentOS profile.

kernel-ml is the Fedora main-line kernel and might be desired in some cases to help
 prevent vlan splinters issues for some network cards.

Closes-bug: #1263072
Related-bug: #1282493

Change-Id: I0d65b0b64feea05c413c86d37c30d9ccabf870c8

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -130,6 +130,10 @@ perl
 daemonize
 rsync
 
+# COBBLER EMBEDDED SNIPPET: 'kernel_ml_if_enabled'
+# LISTS kernel-ml PACKAGE IF kernel_ml VARIABLE IS SET TO 1
+$SNIPPET('kernel_ml_if_enabled')
+
 # COBBLER EMBEDDED SNIPPET: 'puppet_install_if_enabled'
 # LISTS puppet PACKAGE IF puppet_auto_setup VARIABLE IS SET TO 1
 $SNIPPET('puppet_install_if_enabled')
