Fix local_settings interpolation
Change-Id: Icc3daafa2fcbd03e4d734b191edaf32f30a2e558

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -3,7 +3,7 @@ import os
 from django.utils.translation import ugettext_lazy as _
 from openstack_dashboard import exceptions
 
-DEBUG = <%= django_debug %>
+DEBUG =<% if django_debug %>True<% else %>False<% end %>
 TEMPLATE_DEBUG = DEBUG
 PROD = True
 #USE_SSL = False
