Disable innodb table format Barracuda for RH
Barracuda format tables is only available
in later versions of MySQL. Added option
to disable this option for RedHat installs.

Change-Id: I3b88c33f97ec4f0c00340c482fd2141ec7f45552
Closes-Bug: 1283036

--- a/deployment/puppet/mysql/templates/my.cnf.erb
+++ b/deployment/puppet/mysql/templates/my.cnf.erb
@@ -9,7 +9,9 @@ syslog
 <% end -%>
 [mysqld]
 innodb_file_per_table=1
+<% if @operatingsystem != 'RedHat' %>
 innodb_file_format=Barracuda
+<% end -%>
 user    = mysql
 #pid-file  = <%= pidfile %>
 socket    = <%= socket %>
