--- a/deployment/puppet/sahara/templates/logging.conf.erb
+++ b/deployment/puppet/sahara/templates/logging.conf.erb
@@ -13,12 +13,12 @@ handlers = production,devel,stderr
 propagate = 1
 
 [formatter_debug]
-format = savanna-%(name)s %(levelname)s: %(module)s %(funcName)s %(message)s
+format = sahara-%(name)s %(levelname)s: %(module)s %(funcName)s %(message)s
 
 [formatter_normal]
-format = savanna-%(name)s %(levelname)s: %(message)s
+format = sahara-%(name)s %(levelname)s: %(message)s
 
-# logging info to <%= @syslog_log_facility_savanna %> with debug:<%= @debug %> and verbose:<%= @verbose %>
+# logging info to <%= @syslog_log_facility_sahara %> with debug:<%= @debug %> and verbose:<%= @verbose %>
 [handler_production]
 class = handlers.SysLogHandler
 <% if @debug then -%>
@@ -31,7 +31,7 @@ formatter = normal
 level = <%= @syslog_log_level %>
 formatter = normal
 <% end -%>
-args = ('/dev/log', handlers.SysLogHandler.<%= @syslog_log_facility_savanna %>)
+args = ('/dev/log', handlers.SysLogHandler.<%= @syslog_log_facility_sahara %>)
 
 # TODO find out how it could be usefull and how it should be used
 [handler_stderr]
