--- a/deployment/puppet/openstack/templates/10-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/10-fuel.conf.erb
@@ -21,7 +21,7 @@
 "/var/log/mysqld.log"
 "/var/log/murano/*.log"
 "/var/log/heat/*.log"
-"/var/log/savanna/*.log"
+"/var/log/sahara/*.log"
 {
 # This file is used for daily log rotations, do not use size options here
   sharedscripts
