--- a/deployment/puppet/rsyslog/templates/60-puppet-apply.conf.erb
+++ b/deployment/puppet/rsyslog/templates/60-puppet-apply.conf.erb
@@ -2,6 +2,7 @@
 
 ### collect puppet logs of all levels in /var/log/puppet/puppet.log
 if ($programname == 'puppet-apply' \
+ or $programname == 'puppet-user' \
  or $programname == 'puppet-error') \
 ### use 6 for INFO+ msg levels, 5 for WARN+ etc.
 ###  and $syslogseverity <= '6' \
