Use a new ruby 2.1 in the master node as a single ruby version.
* install Astute as package;
* setup supervisor to use system ruby instead of rbenv ruby;
* code is given in accordance with Ruby 1.9 or higher;
* remove symbolic link to astute bin agent.

Implements: blueprint fuel-new-system-ruby-in-master-node
Change-Id: I41d23330443b592d045186dc989df9e4dc72d387

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -220,6 +220,9 @@ $SNIPPET('centos_authorized_keys')
 # PUTS IN IT ALL THE REPOSITORIES DEFINED IN ks_repo VARIABLE
 $SNIPPET('nailgun_repo')
 
+rpm -e --nodeps ruby
+yum install --exclude=ruby-2.1.1* ruby ruby-devel rubygems
+
 # COBBLER EMBEDDED SNIPPET: 'kernel_lt_if_enabled'
 # INSTALLS kernel-lt PACKAGE IF kernel_lt VARIABLE IS SET TO 1
 $SNIPPET('centos_post_kernel_lt_if_enabled')
