Use a new ruby 2.1 in the master node as a single ruby version.
* install Astute as package;
* setup supervisor to use system ruby instead of rbenv ruby;
* code is given in accordance with Ruby 1.9 or higher;
* remove symbolic link to astute bin agent.

Implements: blueprint fuel-new-system-ruby-in-master-node
Change-Id: I41d23330443b592d045186dc989df9e4dc72d387

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -147,6 +147,8 @@ $SNIPPET('mcollective_install_if_enabled')
 # HERE ARE COMMANDS THAT WILL BE LAUNCHED JUST AFTER
 # INSTALLATION ITSELF COMPLETED
 %post
+rpm -e --nodeps ruby
+yum install --exclude=ruby-2.1.1* ruby ruby-devel rubygems
 
 yum versionlock puppet
 yum versionlock kernel
