--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -161,16 +161,6 @@ echo -e "kernel.core_pattern=/var/log/coredump/core.%e.%p.%h.%t" >> /etc/sysctl.
 chmod 777 /var/log/coredump
 echo -e "* soft core unlimited\n* hard core unlimited" >> /etc/security/limits.conf
 
-gem install httpclient --version 2.2.5  --source <%= @gem_source %> --no-ri --no-rdoc
-gem install json       --version 1.6.1  --source <%= @gem_source %> --no-ri --no-rdoc
-gem install ohai       --version 6.14.0 --source <%= @gem_source %> --no-ri --no-rdoc
-gem install rethtool   --version 0.0.3  --source <%= @gem_source %> --no-ri --no-rdoc
-mkdir -p /etc/nailgun-agent/
-cat > /etc/nailgun-agent/config.yaml << EOA
----
-url: '<%= scope.lookupvar('nailgun::nailgun_api_url') %>'
-EOA
-
 # COBBLER EMBEDDED SNIPPET: 'log_ks_post'
 # CONFIGURES %post LOGGING
 $SNIPPET('log_ks_post')
@@ -219,6 +209,19 @@ $SNIPPET('centos_authorized_keys')
 # CREATES /etc/yum.repos.d/nailgun.repo FILE AND
 # PUTS IN IT ALL THE REPOSITORIES DEFINED IN ks_repo VARIABLE
 $SNIPPET('nailgun_repo')
+
+rpm -e --nodeps ruby
+yum install --exclude=ruby-2.1.1* -y ruby ruby-devel rubygems
+
+gem install httpclient --version 2.2.5  --source <%= @gem_source %> --no-ri --no-rdoc
+gem install json       --version 1.6.1  --source <%= @gem_source %> --no-ri --no-rdoc
+gem install ohai       --version 6.14.0 --source <%= @gem_source %> --no-ri --no-rdoc
+gem install rethtool   --version 0.0.3  --source <%= @gem_source %> --no-ri --no-rdoc
+mkdir -p /etc/nailgun-agent/
+cat > /etc/nailgun-agent/config.yaml << EOA
+---
+url: '<%= scope.lookupvar('nailgun::nailgun_api_url') %>'
+EOA
 
 # COBBLER EMBEDDED SNIPPET: 'kernel_lt_if_enabled'
 # INSTALLS kernel-lt PACKAGE IF kernel_lt VARIABLE IS SET TO 1
