Allow nginx to deploy separate from nailgun
Added new nginx.pp which owns the entire
nginx service, indepdent from main init.pp
for nailgun. Service start is optional to
compensate for LXC envs.

Added new fields for nailgun and ostf hosts
in case they are on a separate server or
container.

blueprint fuel-containerization-of-services

Change-Id: I79f10b7abc97eeb94574718e1dcf14cf5771c8cd

--- a/deployment/puppet/nailgun/templates/nginx_nailgun.conf.erb
+++ b/deployment/puppet/nailgun/templates/nginx_nailgun.conf.erb
@@ -1,5 +1,5 @@
 upstream nailgun-application {
-    server 127.0.0.1:8001;
+    server <%= nailgun_host %>:8001;
 }
 
 server {
@@ -24,15 +24,15 @@ server {
 
     location /static {
         autoindex on;
-        alias <%= @staticdir %>;
+        alias <%= staticdir %>;
     }
 
     location /dump {
-        alias <%= @logdumpdir %>;
+        alias <%= logdumpdir %>;
     }
 
     location ~ ^/ostf/(.*) {
-        proxy_pass http://127.0.0.1:8777/v1/$1;
+        proxy_pass http://<%= ostf_host %>:8777/v1/$1;
         proxy_buffering off;
     }
 
