--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -1,4 +1,4 @@
-LISTEN_ADDRESS: "127.0.0.1"
+LISTEN_ADDRESS: "127.0.0.1":
 LISTEN_PORT: "8001"
 DEVELOPMENT: false
 
@@ -37,10 +37,10 @@ VLANS_RANGE_END: "1000"
 
 RABBITMQ:
   fake: "0"
-  hostname: "127.0.0.1"
+  hostname: "<%= rabbitmq_host %>"
   port: 5672
-  userid: "<%= @rabbitmq_naily_user %>"
-  password: "<%= @rabbitmq_naily_password %>"
+  userid: "<%= rabbitmq_naily_user %>"
+  password: "<%= rabbitmq_naily_password %>"
   virtual_host: "/"
 
 APP_LOG: "/var/log/nailgun/app.log"
