Allow separate RabbitMQ server for nailgun
Add rabbitmq_host variable for all classes
that depend on RabbitMQ for configuration,
including nailgun, naily, and mcollective.

RabbitMQ server and required users are
no longer a core dependency of nailgun class.

Added workaround for running RabbitMQ in
docker by purging /etc/default/rabbitmq-server,
which contains a ulimit call.

TODO: Refactor mcollective::rabbitmq to not
include iptables commands so it can be called
for deployment inside docker.

blueprint fuel-containerization-of-services

Change-Id: I027740b412b8d7d03adfd4098916becf352f462d

--- a/deployment/puppet/nailgun/templates/astuted.conf.erb
+++ b/deployment/puppet/nailgun/templates/astuted.conf.erb
@@ -1,4 +1,4 @@
-broker_host: 'localhost'
+broker_host: '<%= @rabbitmq_host %>'
 broker_port: 5672
 broker_username: '<%= @rabbitmq_astute_user %>'
 broker_password: '<%= @rabbitmq_astute_password %>'
