Separate OSTF and Postgres from nailgun
Enables capability to install nailgun and
OSTF without postgres server for Docker
installation. OSTF moved out of base
Nailgun class so it can be installed
separately. Database paramters are
explicitly declared for OSTF both in
the class and in service definitions.

blueprint fuel-containerization-of-services

Change-Id: I841c328ab932c54ad44e33018511be9c1d5220b3

--- a/deployment/puppet/nailgun/templates/supervisord.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.erb
@@ -94,7 +94,7 @@ stderr_events_enabled=false
 serverurl=AUTO
 
 [program:ostf]
-command=<%= @ostf_env %>/bin/ostf-server --host=127.0.0.1 --port=8777 --log_file=/var/log/ostf.log --dbpath postgresql+psycopg2://ostf:ostf@127.0.0.1:5432/ostf
+command=<%= ostf_env %>/bin/ostf-server --host=<%= scope.lookupvar('nailgun::ostf::host') %> --port=8777 --log_file=<%= scope.lookupvar('nailgun::ostf::logfile' %> --dbpath <%= scope.lookupvar('nailgun::ostf::dbengine')://<%= scope.lookupvar('nailgun::ostf::dbuser') %>:<%= scope.lookupvar('nailgun::ostf::dbpass') %>@<%= scope.lookupvar('nailgun::ostf::dbhost') %>:<%= scope.lookupvar('nailgun::ostf::dbport') %>/<%= scope.lookupvar('nailgun::ostf::dbport') %>
 process_name=%(program_name)s
 numprocs=1
 numprocs_start=0
