--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -39,8 +39,8 @@ RABBITMQ:
   fake: "0"
   hostname: "127.0.0.1"
   port: 5672
-  userid: "<%= @rabbitmq_naily_user %>"
-  password: "<%= @rabbitmq_naily_password %>"
+  userid: "<%= @rabbitmq_astute_user %>"
+  password: "<%= @rabbitmq_astute_password %>"
   virtual_host: "/"
 
 APP_LOG: "/var/log/nailgun/app.log"
