--- a/deployment/puppet/nailgun/templates/supervisord.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.erb
@@ -68,8 +68,8 @@ stdout_capture_maxbytes=0
 stdout_events_enabled=false
 serverurl=AUTO
 
-[program:naily]
-command=/usr/bin/nailyd -c /etc/naily/nailyd.conf -l /var/log/naily/naily.log -w 7
+[program:astute]
+command=/usr/bin/astuted -c /etc/astute/astuted.conf -l /var/log/astute/astute.log -w 7
 process_name=%(program_name)s
 numprocs=1
 numprocs_start=0
@@ -81,12 +81,12 @@ exitcodes=0,2
 stopsignal=INT
 stopwaitsecs=60
 redirect_stderr=true
-stdout_logfile=/var/log/naily/app.log
+stdout_logfile=/var/log/astute/app.log
 stdout_logfile_maxbytes=50MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=0
 stdout_events_enabled=false
-stderr_logfile=/var/log/naily/err.log
+stderr_logfile=/var/log/astute/err.log
 stderr_logfile_maxbytes=50MB
 stderr_logfile_backups=10
 stderr_capture_maxbytes=0
